--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -13,7 +13,7 @@
       <p>If a dog chews shoes whose shoes does he choose?</p>
       <div class="flex justify-between">
         <div class="card-actions justify-end">
-          <button class="btn btn-sm btn-primary">Edit</button>
+          <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn btn-sm btn-primary">Edit</a>
         </div>
 
         <div class="card-actions justify-end">
