feat: delete category name
1. Add functionality to delete a category from db.

--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -2,22 +2,32 @@
 <section>
   <div class="text-center space-y-3">
     <h3>Categories</h3>
-    <a href="{{ url_for('add_category') }}" class="btn btn-sm btn-accent">Add New Category</a>
+    <a href="{{ url_for('add_category') }}" class="btn btn-sm btn-accent"
+      >Add New Category</a
+    >
   </div>
 
   {% for category in categories %}
 
-  <div class="card w-96 shadow-xl bg-info-content ">
+  <div class="card w-96 shadow-xl bg-info-content">
     <div class="card-body">
       <h2 class="card-title">{{ category.category_name }}</h2>
       <p>If a dog chews shoes whose shoes does he choose?</p>
       <div class="flex justify-between">
         <div class="card-actions justify-end">
-          <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn btn-sm btn-primary">Edit</a>
+          <a
+            href="{{ url_for('edit_category', category_id=category.id) }}"
+            class="btn btn-sm btn-primary"
+            >Edit</a
+          >
         </div>
 
         <div class="card-actions justify-end">
-          <button class="btn btn-sm btn-primary">Delete</button>
+          <a
+            href="{{ url_for('delete_category', category_id=category.id) }}"
+            class="btn btn-sm btn-primary"
+            >Delete</a
+          >
         </div>
       </div>
     </div>
