feat: add mobile menu toggle

--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -23,7 +23,7 @@
     <!-- header -->
     <header class="container mt-2 sm:flex sm:justify-between items-center">
       <div class="flex items-center">
-        <div id="nav-button" class="block sm:hidden">
+        <div id="main-nav-toggle" class="block sm:hidden">
           <!-- mobile menu button -->
 
           <button class="btn btn-square btn-ghost">
