--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <section>
   <div class="text-center space-y-3">
-    <h3>Categories</h3>
+    <h1>All Categories</h1>
     <a href="{{ url_for('add_category') }}" class="btn btn-sm btn-accent"
       >Add New Category</a
     >
@@ -12,7 +12,6 @@
   <div class="card w-96 shadow-xl bg-info-content">
     <div class="card-body">
       <h2 class="card-title">{{ category.category_name }}</h2>
-      <p>If a dog chews shoes whose shoes does he choose?</p>
       <div class="flex justify-between">
         <div class="card-actions justify-end">
           <a
