--- a/taskmanager/templates/task-edit.html
+++ b/taskmanager/templates/task-edit.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %} {% block content %}
+  <section class="text-center space-y-4">
+    <h1 class="text-2xl">Edit Task</h1>
+
+    <form method="POST" action="{{ url_for('edit_task', task_id=task.id) }}">
+      <!-- task name -->
+      <div>
+        <label for="task_name"></label>
+        <input id="task_name"
+          placeholder="Task Name"
+          name="task_name"
+          minlength="5"
+          maxlength="50"
+          type="text"
+          value="{{ task.task_name }}"
+          required/>
+      </div>
+      <!-- task description -->
+      <div>
+        <label for="task_description"></label>
+        <textarea
+          id="task_description"
+          placeholder="Task Description"
+          name="task_description"
+          minlength="5"
+          maxlength="200"
+          type="text"
+          required
+        >
+        {{- task.task_description -}}
+        </textarea>
+      </div>
+      <!-- due date -->
+      <div>
+        <label for="due_date"></label>
+        <input id="due_date"
+          name="due_date"
+          type="date"
+          value="{{ task.due_date }}"
+          required/>
+      </div>
+      <!-- category id -->
+      <div>
+        <label for="category_id"></label>
+        <select id="category_id" name="category_id" class="validate" required>
+          <option value="" disabled selected>Choose Category</option>
+          {% for category in categories %}
+            {% if category == task.category %}
+              <option value="{{ category.id }}" selected>{{ category.category_name }}</option>
+            {% else %}
+              <option value="{{ category.id }}">{{ category.category_name }}</option>
+            {% endif %}
+          {% endfor %}
+        </select>
+      </div>
+      <!-- is urgent -->
+      <div>
+        <label for="is_urgent">Urgent</label>
+        {% if task.is_urgent == True %}
+          <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+        {% else %}
+          <input id="is_urgent" name="is_urgent" type="checkbox">
+        {% endif %}
+      </div>
+      <!-- submit button -->
+      <div>
+        <button type="submit">Edit Task</button>
+      </div>
+    </form>
+
+  </section>
+{% endblock %}
