--- a/taskmanager/templates/category-add.html
+++ b/taskmanager/templates/category-add.html
@@ -4,7 +4,6 @@
 
   <form action="{{ url_for('add_category') }}" method="POST" class="space-y-4">
     <div>
-      📁
       <label for="category_name"></label>
       <input
         type="text"
@@ -18,7 +17,7 @@
 
     </div>
 
-    <button type="submit" class="btn btn-sm btn-primary">Add</button>
+    <button type="submit" class="btn btn-sm btn-outline btn-primary max-w-sm ">Add</button>
   </form>
 </section>
 {% endblock %}
